<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_menu_city_manager"
            android:icon="@mipmap/ic_menu_city_manage"
            android:title="@string/city_manager" />
    </group>

    <item android:title="@string/others" >
        <menu>
            <item
                android:id="@+id/nav_menu_theme_skin"
                android:icon="@mipmap/ic_menu_skin"
                android:title="@string/theme_skin" />
            <item
                android:id="@+id/nav_menu_check_update"
                android:icon="@mipmap/ic_menu_check_update"
                android:title="@string/check_update" />
            <item
                android:id="@+id/nav_menu_setting"
                android:icon="@mipmap/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_menu_about"
                android:icon="@mipmap/ic_menu_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>