<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/area_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/area_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/find_city"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/area_ll_find_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/area_ed_find_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/find_city..."
            android:gravity="center"
            android:textSize="20sp"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/view"
                android:layout_width="5dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

            </LinearLayout>

            <TextView
                android:id="@+id/area_tv_find_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/view"
                android:layout_toRightOf="@+id/view"
                android:layout_marginLeft="16dp"
                android:text="@string/hot_city"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/area_tv_all_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/all_city"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/area_rv_all_city"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>